tests/ui/span/dropck-object-cycle.stderr
error[E0597]: `*m` does not live long enough
  --> $DIR/dropck-object-cycle.rs:27:31
   |
LL |     let m : Box<dyn Trait+'static> = make_val();
   |         - binding `m` declared here
LL |     assert_eq!(object_invoke1(&*m), (4,5));
   |                               ^^^ borrowed value does not live long enough
...
LL | }
   | -
   | |
   | `*m` dropped here while still borrowed
   | borrow might be used here, when `m` is dropped and runs the destructor for type `Box<dyn Trait<'_>>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0597`.
